build: Verify compilation JDK 21 (#3146)
* build: Give the tests a run on JDK 21
* Accept warning in files connector
* opens for internal nio access in gcloud big query storage
* bumping cassandra docker image to 4.1 makes test pass locally
* Force bump bytebuddy to make mockito work
* bump arrow to make gcloud big query test pass
* give cassandra even more time
* Back to running tests on Java 11, leave compilation on 21